--- a/Menu.html
+++ b/Menu.html
@@ -19,7 +19,7 @@
     <a><strong>Tugas Alexa Okta Rianda</strong></a><br/>
     <a href="23451096.AlexaOktaRianda.DW.2TIA.pdf" target="content">Tugas 1</a><br>
     <a href="lexa.html" target="content">Tugas 2</a><br>
-    <a href="melon.html" target="content">Tugas 3</a><br>
+    <a href="melon1.html" target="content">Tugas 3</a><br>
     <a href="lexa.html" target="content">Tugas 4</a><br>
     <a href="okta.html" target="content">Tugas 5</a><br>
     <a href="tabel.html" target="content">Tugas 6</a><br>
