--- a/frameset.html
+++ b/frameset.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Kelompok</title>
 </head>
-    <frameset rows="20%, 55%, 15%">
+    <frameset rows="20%, 55%, 15%" border="0">
         <frame src="Judul.html">
     <frameset cols="30%,70%">
         <frame src="Menu.html">
