--- a/latexternal1.html
+++ b/latexternal1.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-color:burlywood;
-        }
-    </style>
-        
+    <link rel="stylesheet"type="text/css"
+    href="File.css"/>
 </head>
 <body>
-    <h1><center>Tugas Kelompok Affadilla & Alexa</center></h1>
+    Ini Contoh External Style Sheet
 </body>
 </html>
