--- a/Menu.html
+++ b/Menu.html
@@ -45,8 +45,12 @@
     <a href="LatihanTugas4.html" target="content">Tugas 4</a></br>
     <a href="LatihanTugas5.html" target="content">Tugas 5</a></br>
     <a href="LatihanTugas6.html" target="content">Tugas 6</a></br>
-
-
+    PERTEMUAN 12,13,14 </br>
+    <a href="http://localhost/BelajarPhp/" target="content">Tugas1</a></br>
+    <a href="http://localhost/BelajarPhp/lat1.php" target="content">Tugas2</a><br>
+    <a href="http://localhost/BelajarPhp/lat2.php" target="content">Tugas3</a><br>
+    <a href="http://localhost/BelajarPhp/lat3.php" target="content">Tugas4</a><br>
+    <a href="http://localhost/BelajarPhp/lat4.php" target="content">Tugas4</a><br>
     
     
     <p > 
