--- a/Tampilan.html
+++ b/Tampilan.html
@@ -23,6 +23,11 @@
         text-align: center;
         color: #0C0C0C;
     }
+
+        body {
+            background-color:#AF8F6F;
+        }
+   
     </style>
 </head>
 <body>
