--- a/namakel.html
+++ b/namakel.html
@@ -16,6 +16,11 @@
             border-radius: 50%;
             object-fit: cover;
         }
+
+        body {
+            background-color:burlywood;
+        }
+    
     </style>
 </head>
 <body>
